# localchat

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py
backend/: __init__.py  config.py  conversation.py  dia2_service.py  main.py  pronunciation_service.py  tts_service.py
docs/: BUILD_GUIDE.md
frontend/: index.html
static/css/: styles.css
static/js/: app.js
